<resources>
    <string name="app_name">Taller</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_realtime">News</string>
    <string name="menu_storage">Storage</string>
    <string name="menu_sqlite">SQLite</string>
    <string name="menu_recyclerview">Recycled Views</string>
    <string name="menu_info">Information</string>
    <string name="menu_mapa">Location</string>
    <string name="menu_web">Web Site</string>
    <string name="menu_camara">Camara</string>
    <string name="menu_salir">Exit</string>

    <string name="tv_correo">Email:</string>
    <string name="tv_correo_hint">Type your email here</string>
    <string name="tv_contrasena">Password:</string>
    <string name="tv_contrasena_hint">Type your password here</string>
    <string name="btn_ingresar">Log In</string>
    <string name="btn_registrarse">Sign Up</string>

    <string name="toast_failed_new_user">User registration failed</string>
    <string name="toast_pwd_min1">Password should at least have 6 alphanumeric characters</string>
    <string name="toast_pwd_min2">Password should at least have 1 letter, 1 number, and 1 special character</string>
    <string name="toast_invalid_email">Invalid email</string>
    <string name="toast_login_failed">Login failed. Incorrect username/password.</string>
    <string name="toast_nuevo_usuario_fallido">User registration failed</string>


    <string name="tv_realtime">This will display the information from the Data Base</string>
    <string name="tv_salir">If you tap the Exit button, the DB server will be disconnected and a new login will be required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>