<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_correo"/>
        <EditText
            android:id="@+id/edt_Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_correo_hint"
            android:inputType="textEmailAddress"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_contrasena"/>
        <EditText
            android:id="@+id/edt_Contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_contrasena_hint"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_Ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ingreso"
            android:text="@string/btn_ingresar"/>
        <Button
            android:id="@+id/btn_Registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registro"
            android:text="@string/btn_registrarse"
            android:layout_marginLeft="10dp"/>


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>